--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "cviebrock/eloquent-sluggable": "^8.0",
         "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "^8.0",
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
